projects/vb6parse/snapshots/parsers/cst/library/string/rset/rset_in_function.snap
---
source: projects/vb6parse/tests/library/string/rset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: FunctionStatement
      children:
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: RightJustify
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Identifier
              text: text
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: StringKeyword
              text: String
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RSetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RSetKeyword
                  text: RSet
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: RightJustify
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: IdentifierExpression
                      children:
                        - kind: TextKeyword
                          text: text
                - kind: IdentifierExpression
                  children:
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
