projects/vb6parse/snapshots/parsers/cst/library/string/rset/rset_in_select_case.snap
---
source: projects/vb6parse/tests/library/string/rset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: mode
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "1"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: RSetStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: RSetKeyword
                      text: RSet
                    - kind: Whitespace
                      text: " "
                    - kind: BinaryExpression
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: OutputKeyword
                              text: output
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Left\""
                    - kind: IdentifierExpression
                      children:
                        - kind: Newline
                          text: "\n"
                - kind: Whitespace
                  text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "2"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: RSetStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: RSetKeyword
                      text: RSet
                    - kind: Whitespace
                      text: " "
                    - kind: BinaryExpression
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: OutputKeyword
                              text: output
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Right\""
                    - kind: IdentifierExpression
                      children:
                        - kind: Newline
                          text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
        - kind: Newline
          text: "\n"
